# training-agents

./: .env  .gitignore  README.md  pyproject.toml
data/: user_profile.json
data/daily_checkin/: 2024-02-28.json  2024-02-29.json  2024-03-01.json  2024-03-02.json  2024-03-04.json  2024-03-06.json  2024-03-11.json  2024-03-12.json  2024-03-17.json  2024-03-21.json
data/training/: 亚索80020240321210044.tcx  恢复跑20240307184639.tcx  恢复跑20240309202545.tcx  武汉市_跑步20240228215126.tcx  武汉市_跑步20240304215126.tcx  武汉市_跑步20240305220508.tcx  武汉市_跑步20240306162634.tcx  武汉市_跑步20240317220508.tcx  法特莱克跑20240312204414.tcx
docs/: agent_state.md  training-agent.en.md  training-agent.md  training_planner_agent.md
tests/: test_data_agent.py  test_decision_engine.py  test_e2e_full.py  test_load_agent.py  test_load_rag_chain.py  test_performance_agent.py  test_performance_rag_chain.py  test_rag_ingestion.py  test_recovery_agent.py  test_recovery_rag.py  test_recovery_rag_chain.py  test_report_generator.py  test_risk_agent.py  test_risk_rag_chain.py  test_sra_agent.py
training_agents/: __init__.py  default_config.py  main.py
training_agents/agents/analysts/: data_analyst.py  load_analyst.py  performance_analyst.py  recovery_analyst.py  risk_analyst.py
training_agents/dataflows/: __init__.py  history_reader.py  profile_manager.py  tcx_parser.py
training_agents/graph/: setup.py  tools.py
training_agents/llm_clients/: api_key_env.py  openai_client.py
training_agents/rag/: __init__.py  build_index.py  config.py  embedding.py  ingestion.py  retrieval.py
(+10 files in other folders)
