[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "training_agents"
version = "0.1.0"
description = "TrainingAgents: Multi-Agent Training Analysis System for Runners"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "langgraph>=0.4.8",
    "langchain-openai>=0.3.23",
    "lxml>=5.0.0",
    "pandas>=2.3.0",
    "typing-extensions>=4.14.0",
    "pytest>=8.0.0",
]

[project.scripts]
training-agents = "training_agents.main:main"

[tool.setuptools.packages.find]
include = ["training_agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"
markers = [
    "llm: tests that require LLM API calls",
    "slow: tests that are slow (require model loading, Milvus)",
]
